# i-love-karpov

./: .gitignore  LICENSE.md  README.md
scripts/: cp_licenses.sh  dos2unix.sh  rm_archives.sh  rm_builds.sh  rm_licenses.sh  rm_user_files.sh
sem1/: README.md
sem1/nvi_arrays/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sem1/nvi_arrays_dynamic/: mainwindow.cpp  mainwindow.h
sem1/nvi_arrays_sorting/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sem1/nvi_arrays_sorting_copiesandsearch/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sem1/nvi_character/: mainwindow.cpp  mainwindow.h  mainwindow.ui  nvi_character.pro
sem1/nvi_zachet_factorial/: mainwindow.cpp  mainwindow.ui
sem1/zachet_frequency/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sem1/zachet_notation/: LICENSE  mainwindow.cpp  mainwindow.h  mainwindow.ui
sem1/zachet_type/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sem2/: README.md
sem2/lr_11_12/: mainwindow.cpp  mainwindow.h
sem2/lr_14/: arc.cpp  brush.cpp  canvas.h  color.cpp  curve.cpp  curve.h  curvedialog.cpp  curvedialog.h  curvedialog.ui  elliptic.cpp  lr_14.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_pen.h  mywindow.cpp  mywindow.ui  pen.cpp  pixel.cpp  point.cpp  point.h  polygon.cpp  polygon.h  rectangle.cpp  tooldialog.cpp  tooldialog.ui
sem2/lr_15/: LICENSE  arc.h  brushdialog.ui  color.cpp  elliptic.h  line.cpp  line.h  lr_15.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  multipoint.cpp  multipoint.h  pendialog.ui  pixel.h  point.cpp  point.h  pointsdialog.cpp  pointsdialog.ui  primitive.cpp  primitive.h
sem2/nvi_laba11_2/: mainwindow.cpp  mainwindow.ui
sem3/nvi_timer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  nvi_timer.pro
sem5/: docker-compose.yml  supergames_dump.sql
(+404 files in other folders)
